feat: add table ui skeleton

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,9 @@
 
 <body>
   <main class="graph"></main>
+  <div class="table-container">
+    <table class="table"></table>
+  </div>
   <script src="app.ts"></script>
 </body>
 
