feat: improve table data processing and styles

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,9 +9,20 @@
 </head>
 
 <body>
-  <main class="graph"></main>
+  <div class="graph"></div>
   <div class="table-container">
-    <table class="table"></table>
+    <table class="income">
+      <thead><th>Income</th></thead>
+      <tbody></tbody>
+    </table>
+    <table class="expenses"> 
+      <thead><th>Expenses</th></thead>
+      <tbody></tbody>
+    </table>
+    <table class="assets">
+      <thead><th>Assets</th></thead>
+      <tbody></tbody>
+    </table>
   </div>
   <script src="app.ts"></script>
 </body>
