feat: add ability to select graph years

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,17 +10,27 @@
 
 <body>
   <div class="graph"></div>
+  <div class="graph-options">
+    <select class="start-year"></select>
+    <select class="end-year"></select>
+  </div>
   <div class="table-container">
     <table class="income">
-      <thead><th>Income</th></thead>
+      <thead>
+        <th>Income</th>
+      </thead>
       <tbody></tbody>
     </table>
-    <table class="expenses"> 
-      <thead><th>Expenses</th></thead>
+    <table class="expenses">
+      <thead>
+        <th>Expenses</th>
+      </thead>
       <tbody></tbody>
     </table>
     <table class="assets">
-      <thead><th>Assets</th></thead>
+      <thead>
+        <th>Assets</th>
+      </thead>
       <tbody></tbody>
     </table>
   </div>
