feat: implement graph year selector logic

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="graph"></div>
   <div class="graph-options">
-    <select class="start-year"></select>
-    <select class="end-year"></select>
+    <select class="start"></select>
+    <select class="end"></select>
   </div>
   <div class="table-container">
     <table class="income">
