feat: add checkbox toggles for graph properties

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,10 +9,22 @@
 </head>
 
 <body>
-  <div class="graph"></div>
-  <div class="graph-options">
-    <select class="start"></select>
-    <select class="end"></select>
+  <div class="graph-container">
+    <div class="graph-options-container">
+      <div class="graph-options-years">
+        <fieldset>
+          <legend>Years</legend>
+          <select class="start"></select>
+          <select class="end"></select>
+        </fieldset>
+      </div>
+      <div class="graph-options-properties">
+        <fieldset>
+          <legend>Assets</legend>
+        </fieldset>
+      </div>
+    </div>
+    <div class="graph"></div>
   </div>
   <div class="table-container">
     <table class="income">
