refactor: improve component structure to make styles more modular

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -4,17 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/index.css">
   <title>Financials</title>
 </head>
 
 <body>
-  <div class="graph-container">
+  <div class="container graph-container">
     <div class="graph-options-container">
       <div class="graph-options-years">
         <fieldset>
           <legend>Years</legend>
           <select class="start"></select>
+          <span>to</span>
           <select class="end"></select>
         </fieldset>
       </div>
@@ -26,7 +27,7 @@
     </div>
     <div class="graph"></div>
   </div>
-  <div class="table-container">
+  <div class="container table-container">
     <table class="income">
       <thead>
         <th>Income</th>
